<resources>
    <string name="app_name">LearnGit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="customer_bottom_navigation_menu_home">Ana Sayfa</string>
    <string name="customer_bottom_navigation_menu_discover">Keşfet</string>
    <string name="customer_bottom_navigation_menu_reservations">Rezervasyonlar</string>
    <string name="customer_bottom_navigation_menu_messages">Mesajlar</string>
    <string name="customer_bottom_navigation_menu_profile">Profil</string>

    <string name="business_name">Business A</string>
    <string name="kitchen_type">Dünya Mutfağı</string>
    <string name="location_distance">5 km</string>
    <string name="reservation_button">Rezervasyon yap</string>
    <string name="location_info">Address: %1$s\nLocality: %2$s\nState: %3$s\nCountry: %4$s\nPostal Code: %5$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_location">Konum Belirleyiniz</string>
    <string name="nerede_rezervasyon_yapmak_istersin">Nerede rezervasyon yapmak istersin?</string>
    <string name="filtrele">Filtrele</string>
    <string name="restoran">Restoran</string>
    <string name="cafe">Cafe</string>
    <string name="meyhane">Meyhane</string>
    <string name="bar">Bar</string>
    <string name="kahve">Kahve</string>
    <string name="pastane">Pastane</string>
    <string name="business_a">Business A</string>
    <string name="d_nya_mutfa">Dünya Mutfağı</string>
    <string name="_5_km">5 km</string>
    <string name="rezervasyon_yap">Rezervasyon yap</string>
    <string name="liste_g_r_n_m">Liste görünümü</string>
    <string name="harita_g_r_n_m">Harita görünümü</string>
    <string name="business">Business</string>
    <string name="customer">Customer</string>
    <string name="adres">Yeni Mah. Atatürk Cad. No:2 Ortaköy, Beşiktaş, İstanbul</string>
    <string name="konumu_onayla">Konumu Onayla</string>
    <string name="temizle">Temizle</string>
    <string name="letme_t_r">İşletme Türü</string>
    <string name="mutfak_t_r">Mutfak Türü</string>
    <string name="d_nya">Dünya</string>
    <string name="t_rk">Türk</string>
    <string name="akdeniz">Akdeniz</string>
    <string name="uzakdo_u">Uzakdoğu</string>
    <string name="sokak_lezzetleri">Sokak lezzetleri</string>
    <string name="ev_yemekleri">Ev yemekleri</string>
    <string name="di_er_se_enekler">Diğer Seçenekler</string>
    <string name="rezervasyona_uygun_olanlar_g_ster">Rezervasyona uygun olanları göster</string>
    <string name="rezervasyon_yap_lmayanlar_g_ster">Rezervasyon yapılmayanları göster</string>
    <string name="sadece_u_anda_a_k_olanlar_g_ster">Sadece şu anda açık olanları göster</string>
    <string name="sonu_lar_g_ster">Sonuçları Göster</string>
</resources>