<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-40dp"
        android:paddingBottom="50dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:background="#FFFFFF"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textViewFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/filtrele"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textViewClear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/temizle"
                android:textColor="#C3262626"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewBusinessType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/letme_t_r"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewFilter" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/flowLayoutBusinessType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/textViewBusinessType">

                <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_restoran"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                app:chipBackgroundColor="@color/chipBackgroundColor"
                android:layout_height="wrap_content"
                android:text="@string/restoran"
                app:chipIconVisible="true"
                app:chipIconTint="@color/black"
                app:closeIconVisible="false"
                app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_cafe"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/cafe"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_meyhane"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/meyhane"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_bar"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/bar"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_kahve"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/kahve"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_pastane"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/pastane"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textViewCuisineType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/mutfak_t_r"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flowLayoutBusinessType" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/flowLayoutCuisineType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/textViewCuisineType">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_dunya"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:layout_height="wrap_content"
                    android:text="@string/d_nya"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_turk"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/t_rk"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_akdeniz"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/akdeniz"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_uzakdogu"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/uzakdo_u"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_street_food"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/sokak_lezzetleri"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_ev_yemekleri"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chipBackgroundColor"
                    android:text="@string/ev_yemekleri"
                    app:chipIconVisible="true"
                    app:chipIconTint="@color/black"
                    app:closeIconVisible="false"
                    app:rippleColor="@color/rippleColor" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textViewOtherOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/di_er_se_enekler"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flowLayoutCuisineType" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/textViewOtherOptions"
                tools:layout_editor_absoluteX="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/rezervasyona_uygun_olanlar_g_ster"
                        android:textSize="14sp" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/rezervasyon_yap_lmayanlar_g_ster"
                        android:textSize="14sp" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/sadece_u_anda_a_k_olanlar_g_ster"
                        android:textSize="14sp" />

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirmButton"
                style="@android:style/Widget.Button"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:elevation="3dp"
                android:fontFamily="sans-serif"
                android:text="@string/sonu_lar_g_ster"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
